[package]
name            = "merklebtree"
authors         = ["webb.shi <bradyjoestar@gmail.com>"]
edition         = "2018"
license-file    = "LICENSE"
description     = "Merkle Btree implementation."
repository      = "https://github.com/bradyjoestar/merklebtree"
homepage        = "https://github.com/bradyjoestar/merklebtree"
keywords        = ["merkle","merkle-btree"]
readme          = "README.md"
version         = "0.1.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "merklebtree"
path = "src/lib.rs"

[dependencies]
ring = "0.16.9"
hex = "0.4.0"
serde = { version = "1.0.60", features = ["derive"] }
serde_json = "1.0.41"